--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,6 @@ name = "pypi"
 
 [packages]
 requests = "*"
-joblib = "*"
-pandas = "*"
-pyarrow = "*"
 prompt-toolkit = "*"
 rich = "*"
 python-dotenv = "*"
@@ -16,6 +13,7 @@ python-dotenv = "*"
 black = "*"
 pytest = "*"
 isort = "*"
+setuptools = "*"
 
 [requires]
 python_version = "3.12"
